# agentignore

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  demo-pi.cast  demo.cast  index.html  style.css
.cargo/: config.toml
.devcontainer/: README.md  devcontainer.json  notes.md
docs/: project.md
docs/prds/: mount-dashboard.md  performance-hardening.md  symlink-correctness.md
src/: fs.rs  lib.rs  main.rs  tools.rs
src/cmd/: args.rs  check.rs  common.rs  doctor.rs  explain.rs  init.rs  mod.rs  mount.rs  run.rs  unmount.rs
src/fs/: allow_list.rs  handle_table.rs  inode_table.rs  policy.rs  policy_freshness.rs  stats.rs
test-project/: .agentallow  package.json
tests/: agentallow.rs  agentfs.rs  cascading_ignore.rs  handle_table.rs  ignore.rs  inode_table.rs  policy_allow.rs  policy_basic.rs  policy_hot_reload.rs  run.rs
tests/common/: mod.rs
